# BOWrapper

./: pyproject.toml
bo/bayesianOptimization/: internalBO.py
demo/: Autotrans_shift.slxc  BO_matlab.py  Dronemodel.py  F16_monitor.pkl  HighFidelity_morelli_rk45_100.pkl  HighFidelity_stevens_euler_35.pkl  MODE_1.pkl  RoverModel.py  f16Model.py  staliroBoInterface.py  test_1d.py  test_3d.py  test_example_1.py  test_example_2.py  test_example_3.py  test_example_rover.py
