[tool.poetry]
name = "bo"
version = "0.1.1"
description = ""
authors = ["daittan <tanmay.khandait@gmail.com>"]
packages = [{include="bo"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
matlabengine= "9.12.21"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"
scipy = "^1.8.1"
scikit-optimize = "^0.9.0"
coverage = "^6.4"
matplotlib = "^3.5.2"
treelib = "^1.6.1"
pandas = "^1.4.3"
pathos = "^0.2.9"
tqdm = "^4.66.2"
plotly = "^5.23.0"
psy-taliro = {version = "1.0.0b9", extras = ["rtamt"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
